--- a/src/GhisTrader/App.xaml
+++ b/src/GhisTrader/App.xaml
@@ -2,8 +2,23 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GhisTrader"
-             >
+             xmlns:ViewModels="clr-namespace:GhisTrader.ViewModels"
+             xmlns:views="clr-namespace:GhisTrader.Views">
     <Application.Resources>
-         
-    </Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/Styles/Common.xaml" />
+        <ResourceDictionary Source="/Styles/NavigationBar.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+
+      <DataTemplate DataType="{x:Type ViewModels:LoginViewModel}">
+        <views:LoginView />
+      </DataTemplate>
+
+      <!--<DataTemplate DataType="{x:Type viewmodels:RegisterViewModel}">
+        <views:RegisterView />
+      </DataTemplate>-->
+    </ResourceDictionary>
+
+  </Application.Resources>
 </Application>
