--- a/src/GhisTrader/Views/LoginView.xaml
+++ b/src/GhisTrader/Views/LoginView.xaml
@@ -11,11 +11,7 @@
   <UserControl.Resources>
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
   </UserControl.Resources>
-  <!--<UserControl.Background>
-    <ImageBrush ImageSource="/Resources/login-background.jpg"
-                Opacity="0.5"
-                Stretch="UniformToFill" />
-  </UserControl.Background>-->
+ 
   <Border Margin="25"
           Padding="50"
           HorizontalAlignment="Center"
@@ -38,14 +34,14 @@
       <TextBlock Grid.Row="0"
                  HorizontalAlignment="Center"
                  FontSize="48"
-                 Text="Simple Trader" />
+                 Text="Ghis Tr@der" />
 
       <TextBlock Grid.Row="1"
                  Margin="0 10"
                  HorizontalAlignment="Center"
                  FontSize="18"
                  FontWeight="Thin"
-                 Text="The world's simplest stock trading application." />
+                 Text="The world's smartest stock trading application." />
 
       <Grid Grid.Row="2"
             Margin="0 20">
