--- a/src/GhisTrader/Views/LoginView.xaml
+++ b/src/GhisTrader/Views/LoginView.xaml
@@ -65,7 +65,7 @@
                      Text="Username" />
           <TextBox Grid.Column="1"
                    Margin="20 0 0 0"
-                   Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" />
+                   Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
 
         <Grid Grid.Row="1"
