--- a/src/GhisTrader/App.xaml
+++ b/src/GhisTrader/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GhisTrader"
              xmlns:ViewModels="clr-namespace:GhisTrader.ViewModels"
-             xmlns:views="clr-namespace:GhisTrader.Views">
+             xmlns:Views="clr-namespace:GhisTrader.Views">
     <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
@@ -12,12 +12,12 @@
       </ResourceDictionary.MergedDictionaries>
 
       <DataTemplate DataType="{x:Type ViewModels:LoginViewModel}">
-        <views:LoginView />
+        <Views:LoginView />
       </DataTemplate>
 
-      <!--<DataTemplate DataType="{x:Type viewmodels:RegisterViewModel}">
-        <views:RegisterView />
-      </DataTemplate>-->
+      <DataTemplate DataType="{x:Type ViewModels:RegisterViewModel}">
+        <Views:RegisterView />
+      </DataTemplate>
     </ResourceDictionary>
 
   </Application.Resources>
