Navigator and some controsl

--- a/src/GhisTrader/App.xaml
+++ b/src/GhisTrader/App.xaml
@@ -18,6 +18,10 @@
       <DataTemplate DataType="{x:Type ViewModels:RegisterViewModel}">
         <Views:RegisterView />
       </DataTemplate>
+      <!--HomeView-->
+      <DataTemplate DataType="{x:Type ViewModels:HomeViewModel}">
+        <Views:HomeView />
+      </DataTemplate>
     </ResourceDictionary>
 
   </Application.Resources>
