--- a/src/GhisTrader/Views/RegisterView.xaml
+++ b/src/GhisTrader/Views/RegisterView.xaml
@@ -42,7 +42,7 @@
                  HorizontalAlignment="Center"
                  FontSize="18"
                  FontWeight="Thin"
-                 Text="The world's simplest stock trading application." />
+                 Text="The world's smarttest stock trading application." />
 
       <Grid Grid.Row="2"
             Margin="0,20">
@@ -134,10 +134,9 @@
 
         <TextBlock Grid.Row="6"
                    Margin="0,10,0,0"
-                   HorizontalAlignment="Center"
-                   DataContext="{Binding ErrorMessageViewModel}"
+                   HorizontalAlignment="Center"                     
                    Foreground="DarkRed"
-                   Text="{Binding Message}"
+                   Text="{Binding ErrorMessage}"
                    Visibility="{Binding HasMessage, Converter={StaticResource BooleanToVisibilityConverter}}" />
       </Grid>
     </Grid>
