--- a/src/GhisTrader/Views/LoginView.xaml
+++ b/src/GhisTrader/Views/LoginView.xaml
@@ -103,8 +103,8 @@
                    Margin="0 10 0 0"
                    HorizontalAlignment="Center"                 
                    Foreground="DarkRed"
-                   Text="{Binding Message}"
-                   Visibility="{Binding HasMessage, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                   Text="{Binding ErrorMessage}"
+                   Visibility="{Binding HasErrorMessage, Converter={StaticResource BooleanToVisibilityConverter}}" />
       </Grid>
     </Grid>
   </Border>
